# net.sourceforge.wxlua-wxlua

./: .build  .build04_artefacts.sh  .build_common.sh  .lxc_build_all.sh  .lxc_build_artefacts.sh  .lxc_build_ubuntu_1404_x64.sh  .lxc_build_ubuntu_1404_x86.sh  .lxc_build_ubuntu_1604_x64.sh  .lxc_build_ubuntu_1604_x86.sh  .lxc_build_ubuntu_1704_x64.sh  .lxc_build_ubuntu_1704_x86.sh  .lxc_build_windows.sh  CMakeLists.txt  Jenkinsfile
cmake/: muhkuh_lua.cmake
jonchki/: jonchkicfg.xml
wxlua/: CMakeLists.txt  wxlua-laptabrok-56a33ba93728.tar.xz  wxlua-pkulchenko-git69fd84d1978b.tar.xz
wxlua/installer/lua5.1/: CMakeLists.txt  install_linux.lua  wxlua.xml
wxlua/installer/lua5.2/: CMakeLists.txt  install.lua  wxlua.xml
wxlua/installer/lua5.3/: CMakeLists.txt  install_windows.lua  wxlua.xml
wxlua/patches/: 001_disable_webview_gl_and_media.diff  002_always_use_unix_style_configuration.diff  003_remove_offending_mingw_fix.diff  004_remove_double_define_of_LUA_COMPAT_ALL.diff  005_use_64bit_compatible_types.diff  006_use_64bit_compatible_types_for_pointer_arithmetic.diff  007_use_64bit_compatible_types.diff  008_use_64bit_compatible_types.diff  009_use_64bit_compatible_types.diff  010_use_64bit_compatible_types.diff  011_use_64bit_compatible_types.diff  012_use_64bit_compatible_types.diff
